--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,44 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root {
+  display: flex;
+  width: 70%;
+  margin: auto;
+  /* background: green; */
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
+#display #button-pannel #button-panel{
+  display: flex;
+  flex-direction: column;
+}
+
+#display {
+  height: 100px;
+  width: 700px;
+  padding: 10px;
+  line-height: 100px;
+  text-align: end;
+  justify-content: end;
+  background: rgb(133, 134, 146);
+  color: white;
+  font-size: 45px;
+  font-weight: 700;
+}
+
+.row{
+  display: flex;
+  justify-content: space-between;
+}
+
+.row button{
+  height: 100px;
+  width: 25%;
+  font-size: 25px;
+  font-weight: 500;
+  border: 1px solid grey;
+}
+ 
